# jaxup

./: .clang-format  .gitignore  CMakeLists.txt  License.md  Readme.md  generateCache.py
include/: jaxup.h  jaxup_common.h  jaxup_generator.h  jaxup_grisu.h  jaxup_node.h  jaxup_numeric.h  jaxup_parser.h  jaxup_power_tables.h
src/: doubleWriter.cpp  inlineTest.cpp  jaxup.cpp  jaxup.h  main.cpp  nodeCopy.cpp  numericTest.cpp  sharedPowerCache.cpp  uglify.cpp
